# logically-logicing-logic

./: CMakeLists.txt  README.md  main.cpp
include/cnf/: CNFConverter.h
include/inference/: InferenceRules.h
include/resolution/: Resolver.h
include/semantics/: TruthTable.h
include/syntax/: Parser.h  Tokenizer.h
src/cnf/: CNFConverter.cpp
src/inference/: InferenceRules.cpp
src/resolution/: Resolver.cpp
src/semantics/: TruthTable.cpp
src/syntax/: Parser.cpp  Tokenizer.cpp
